# slobbler

./: .gitignore  LICENSE  README.md  listener.py  now-playing.playerctl.py  now-playing.py  pyproject.toml  run.py  scrobble.py  slobbler.py
slobbler/: __init__.py  constants.py  listener.py  slobble.py
